--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+v0.1.3. Removed nasty eval. Switching to open4.
+
 v0.1.2. Working correctly on empty branches.
 
 v0.1.1. Tree got more Hash-methods. Better documentation.
